@@ -1,5 +1,3 @@
-- fits needs to cache before write
-
 - threadpool recyling might be useful for dzsave?
 
 
