@@ -1,6 +1,7 @@
 30/6/14 started 7.40.3
 - fix interlaced thumbnails in vipsthumbnail, thanks lovell
 - fix use of "header" in benchmark/, thanks David
+- fits save now caches the image before write, so it's top-to-bottom
 
 25/6/14 started 7.40.2
 - dzsave write to zip stops at 4gb, thanks bgilbert
